--- a/policy.html
+++ b/policy.html
@@ -1002,6 +1002,9 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <p> 구글 어시스턴트 & 구글 홈에 사용되는 앱에 대해서 데이터를 저장하지 않습니다. 자유롭게 사용하세요.</p>
+                        <p> - 현재 서비스를 하는 곳은 구글, 네이버 라인, SK 누구 입니다.</p>
+                        <p> - 본 서비스는 개인정보를 소중히 여깁니다.</p>
+                        
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary"> </span>
